--- a/css/caruske.css
+++ b/css/caruske.css
@@ -1,45 +1,55 @@
-.caruske {
-    width: 100%;
-    padding: 100px 50px;
-    margin: auto;
-    background: yellow;
-    /* position: relative; */
-    height: 100vh;
+
+
+* { box-sizing: border-box; }
+
+.slider {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 300px;
+    box-shadow: 3px 3px 10px rgba(0,0,0,.2);
 }
-.caruske-container {
-    width: 300px;
+.wrapper {
+    overflow: hidden;
+    position: relative;
+    width: 400px;
     height: 300px;
     background-color: red;
     /* position: absolute; */
-    left: 40%;
-    overflow: hidden;
     z-index: 1;
 }
-.caruske-content {
-    width: 10000px;
-    height: 150px;
-    background-color: blue;
-    display: flex;
-    /* position: absolute; */
-    top: 25%;
-    /* left: -300px; */
-    /* left: -${caruska-width}; */
-}
 .slides {
-    width: 300px;
-    height: 150px;
-    /* display: inline-block; */
+    display: flex;
+    position: relative;
+    top: 0;
+    left: -400px;
+    width: 10000px;
 }
-.slides.green {
-    background-color: green;
-}
-.slides.purple {
-    background-color: purple;
-}
-.slides.magenta {
-    background-color: magenta;
+.slides.shifting {
+    transition: left .2s ease-out;
+  }
+.slide {
+    width: 400px;
+    height: 300px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 1s;
+    position: relative;
 }
 
+.slide.green {
+    background-color: green;
+}
+.slide.purple {
+    background-color: purple;
+}
+.slide.magenta {
+    background-color: magenta;
+}
 
 
 
